# Stuck_LLM

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  README.md  package-lock.json  package.json  run-all.sh  run-harness.sh
docs/: implement.md  (+3 more)
src/backend/: README.md  pyproject.toml
src/backend/app/: main.py
src/backend/tests/: conftest.py  test_health.py  test_local_state_store.py  test_phase006_chat_settings_market_data.py  test_phase007_analysis_pipeline.py  test_phase008_scoring.py  test_phase009_backtest.py  test_phase010_ingestion_adapters.py  test_phase011_hosted_readiness.py  test_phase014_conversation_language.py  test_phase015_runner_and_typo_confirmation.py  test_phase016_credentials.py  test_phase018_live_llm_provider.py  test_phase019_live_market_and_news.py  test_phase020_security_and_concurrency.py  test_phase021_provider_policy_reliability.py  test_phase022_us_market_data_provider.py  test_phase023_source_audit_trail.py  test_phase024_cerebras_provider.py  test_phase025_llm_connection_diagnostics.py  test_phase026_generative_chat_orchestration.py  test_phase027_settings_language_policy.py  test_phase031_eval_harness.py  test_phase032_source_safety_evals.py  test_phase033_source_quality_evals.py  test_phase034_prompt_grounding_contract.py  test_phase035_provider_selection_cerebras_first.py  test_phase038_persistent_chat_and_ticker_snapshots.py  test_phase041_agent_harness.py  test_phase052_conversation_delete.py  test_phase055_058_market_chat.py  test_phase064_069_news_digest.py  test_phase077_prediction_probabilities.py  test_phase080_pnl_chat.py  (+24 more)
(+159 files in other folders)
